--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Text-based story game">
 
-    <title>Me, myself, and I</title>
+    <title>me, myself, and I</title>
+    <link href="https://fonts.googleapis.com/css?family=Kreon:400,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
-    <div class="text-center" id="header">
-      <h1>Me, myself, and I</h1>
-    </div>
-
-    <div class="container" id="content"></div>
+    <div id="content"></div>
 
     <!-- Scripts -->
     <script src="js/bundle.js"></script>
